:feat: config tailwind files

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1 class="text-3xl font-bold underline text-red-400">Hello world!</h1>
+    <h1 class="text-3xl font-bold">Hello world!</h1>
+    <p class="text-xl text-blue-200">Lorem ipsum dolor sit.</p>
+    <p class="text-4xl text-amber-600">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci illo
+      enim quod quae. Necessitatibus ex alias obcaecati voluptatem?
+    </p>
   </body>
 </html>
