:feat: creating navbar

--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/output.css" rel="stylesheet" />
+    <link
+      rel="shortcut icon"
+      href="./img/travel-svgrepo-com.svg"
+      type="image/x-icon"
+    />
+    <title>Traveland</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-red-400">Hello world!</h1>
-    <h1 class="text-3xl font-bold">Hello world!</h1>
-    <p class="text-xl text-blue-200">Lorem ipsum dolor sit.</p>
-    <p class="text-4xl text-amber-600">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci illo
-      enim quod quae. Necessitatibus ex alias obcaecati voluptatem?
-    </p>
+    <header class="max-w-[1600px] my-0 mx-auto">
+      <nav
+        class="flex max-w-6xl my-0 mx-auto justify-between items-center pt-9"
+      >
+        <p class="flex-0.5">Trevland</p>
+        <ul class="flex flex-1 justify-around px-54">
+          <a href="#Home">Home</a>
+          <a href="#Location">Location</a>
+          <a href="#Blog">Blog</a>
+          <a href="#About">About</a>
+          <a href="#Contact">Contact</a>
+        </ul>
+        <button class="py-3.5 px-9 bg-amber-400 rounded-sm flex-0.5">
+          Booking now
+        </button>
+      </nav>
+    </header>
   </body>
 </html>
