:feat: creating navbar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     />
     <title>Traveland</title>
   </head>
-  <body>
-    <header class="max-w-[1600px] my-0 mx-auto">
+  <body class="bg-[url('/img/background.jpg')] bg-no-repeat bg-top">
+    <header class="max-w-[1600px] my-0 mx-auto text-white">
       <nav
         class="flex max-w-6xl my-0 mx-auto justify-between items-center pt-9"
       >
@@ -24,7 +24,7 @@
           <a href="#About">About</a>
           <a href="#Contact">Contact</a>
         </ul>
-        <button class="py-3.5 px-9 bg-amber-400 rounded-sm flex-0.5">
+        <button class="py-3.5 px-9 bg-red-400 rounded-sm flex-0.5">
           Booking now
         </button>
       </nav>
