:feat: some code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         class="flex max-w-6xl my-0 mx-auto justify-between items-center pt-9"
       >
         <p class="flex-0.5">Trevland</p>
-        <ul class="flex flex-1 justify-around px-54">
+        <ul class="flex flex-1 justify-around px-54 hover:text-amber-300">
           <a href="#Home">Home</a>
           <a href="#Location">Location</a>
           <a href="#Blog">Blog</a>
