:feat: end header

--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
           Booking now
         </button>
       </nav>
+      <section class="max-w-6xl mx-auto my-50 pt-9">
+        <h1 class="text-6xl max-w-[804px] font-bold">
+          Railtrips To Here, <br />
+          There And Everywhere!
+        </h1>
+        <p class="text-xl mt-8 mb-10 max-w-[458px]">
+          We all wish to start our year the best way possible and also according
+          to a common belief if you have a great start to your.
+        </p>
+        <button
+          class="py-3.5 px-9 bg-red-400 rounded-sm flex-0.5 cursor-pointer hover:scale-105 transition-all"
+        >
+          Explore more
+        </button>
+      </section>
     </header>
   </body>
 </html>
