:feat: header MISTAKES

--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
       type="image/x-icon"
     />
     <title>Traveland</title>
+    <!-- FONTS ARE NOT INCLUDED!!! -->
   </head>
   <body
     class="bg-[url('/img/background.jpg')] bg-no-repeat bg-top cursor-default"
   >
+    <!-- HEADER START -->
     <header class="max-w-[1600px] my-0 mx-auto text-white">
       <nav
         class="flex max-w-6xl my-0 mx-auto justify-between items-center pt-9"
       >
+        <!-- LOGO NOT COMPLETED!!! -->
         <p class="flex-0.5">Trevland</p>
         <ul
           class="flex flex-1 justify-around px-54 cursor-pointer hover:scale-105 transition-all"
         >
           <li><a href="#Home">Home</a></li>
           <li><a href="#Location">Location</a></li>
-          <a href="#Blog">Blog</a>
-          <a href="#About">About</a>
-          <a href="#Contact">Contact</a>
+          <li><a href="#Blog">Blog</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
         <button
           class="py-3.5 px-9 bg-red-400 rounded-sm flex-0.5 cursor-pointer hover:scale-105 transition-all"
@@ -50,5 +53,9 @@
         </button>
       </section>
     </header>
+    <!-- HEADER END -->
+    <!-- SECTION LOCATION START -->
+    <section></section>
+    <!-- SECTION LOCATION END -->
   </body>
 </html>
