:feat: add next section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,50 @@
     </header>
     <!-- HEADER END -->
     <!-- SECTION LOCATION START -->
-    <section></section>
+    <section class="max-w-6xl my-0 mx-auto pt-36">
+      <h2 class="text-center">Popular Location</h2>
+      <p class="text-center">
+        For every one of us, travel came first. We’ve spent years living as
+        nomads, pioneers, and voyagers— from island hopping in the
+      </p>
+      <section class="flex">
+        <article class="bg-white rounded-lg shadow-lg p-6">
+          <img
+            src="./img/travel/image 45.png"
+            alt="View of Seoul, South Korea"
+            class="rounded-md mb-4"
+          />
+          <h3 class="text-xl font-semibold mb-2 text-center">
+            Istanbul, Turkey
+          </h3>
+          <p class="text-center">
+            Istanbul is a major city in Turkey that straddles Europe.
+          </p>
+        </article>
+        <article class="bg-white rounded-lg shadow-lg p-6">
+          <img
+            src="./img/travel/image 48.png"
+            alt="View of Seoul, South Korea"
+            class="rounded-md mb-4"
+          />
+          <h3 class="text-xl font-semibold mb-2 text-center">
+            Seoul, South Korea
+          </h3>
+          <p class="text-center">Seoul is the capital of South Korea.</p>
+        </article>
+        <article class="bg-white rounded-lg shadow-lg p-6">
+          <img
+            src="./img/travel/image 47.png"
+            alt="View of Seoul, South Korea"
+            class="rounded-md mb-4"
+          />
+          <h3 class="text-xl font-semibold mb-2 text-center">
+            Seoul, South Korea
+          </h3>
+          <p class="text-center">Seoul is the capital of South Korea.</p>
+        </article>
+      </section>
+    </section>
     <!-- SECTION LOCATION END -->
   </body>
 </html>
