--- a/index.html
+++ b/index.html
@@ -56,46 +56,71 @@
     <!-- HEADER END -->
     <!-- SECTION LOCATION START -->
     <section class="max-w-6xl my-0 mx-auto pt-36">
-      <h2 class="text-center">Popular Location</h2>
-      <p class="text-center">
-        For every one of us, travel came first. We’ve spent years living as
+      <h2 class="text-center text-4xl font-bold pb-5">Popular Location</h2>
+      <p class="text-center max-w-[650px] mx-auto opacity-50 pb-12">
+        For every one of us, travel came first. We've spent years living as
         nomads, pioneers, and voyagers— from island hopping in the
       </p>
-      <section class="flex">
-        <article class="bg-white rounded-lg shadow-lg p-6">
-          <img
-            src="./img/travel/image 45.png"
-            alt="View of Seoul, South Korea"
-            class="rounded-md mb-4"
-          />
-          <h3 class="text-xl font-semibold mb-2 text-center">
-            Istanbul, Turkey
-          </h3>
-          <p class="text-center">
-            Istanbul is a major city in Turkey that straddles Europe.
-          </p>
+      <section class="flex justify-center gap-6">
+        <!-- Добавил gap для отступов между карточками -->
+        <!-- Карточка 1 -->
+        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[360px]">
+          <!-- Фиксированная ширина -->
+          <div class="h-[331px] overflow-hidden">
+            <!-- Контейнер для изображения с фиксированной высотой -->
+            <img
+              src="./img/travel/image 45.png"
+              alt="View of Istanbul, Turkey"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <section class="mx-7 my-8">
+            <h3 class="text-xl font-semibold mb-2 text-center">
+              Istanbul, Turkey
+            </h3>
+            <p class="text-center">
+              Istanbul is a major city in Turkey that straddles Europe.
+            </p>
+          </section>
         </article>
-        <article class="bg-white rounded-lg shadow-lg p-6">
-          <img
-            src="./img/travel/image 48.png"
-            alt="View of Seoul, South Korea"
-            class="rounded-md mb-4"
-          />
-          <h3 class="text-xl font-semibold mb-2 text-center">
-            Seoul, South Korea
-          </h3>
-          <p class="text-center">Seoul is the capital of South Korea.</p>
+
+        <!-- Карточка 2 -->
+        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[360px]">
+          <div class="h-[331px] overflow-hidden">
+            <img
+              src="./img/travel/image 48.png"
+              alt="View of Kuala Lumpur, Malaysia"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <section class="mx-7 my-8">
+            <h3 class="text-xl font-semibold mb-2 text-center">
+              Kuala Lumpur, Malaysia
+            </h3>
+            <p class="text-center">
+              A 272-step long trek leads you to this century.
+            </p>
+          </section>
         </article>
-        <article class="bg-white rounded-lg shadow-lg p-6">
-          <img
-            src="./img/travel/image 47.png"
-            alt="View of Seoul, South Korea"
-            class="rounded-md mb-4"
-          />
-          <h3 class="text-xl font-semibold mb-2 text-center">
-            Seoul, South Korea
-          </h3>
-          <p class="text-center">Seoul is the capital of South Korea.</p>
+
+        <!-- Карточка 3 -->
+        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[360px]">
+          <div class="h-[331px] overflow-hidden">
+            <img
+              src="./img/travel/image 47.png"
+              alt="View of Seoul, South Korea"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <section class="mx-7 my-8">
+            <h3 class="text-xl font-semibold mb-2 text-center">
+              Seoul, South Korea
+            </h3>
+            <p class="text-center">
+              South Korea officially the Republic of Korea is a country in East
+              Asia.
+            </p>
+          </section>
         </article>
       </section>
     </section>
