--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     />
     <title>Traveland</title>
+
     <!-- FONTS ARE NOT INCLUDED!!! -->
   </head>
   <body
@@ -32,6 +33,7 @@
           <li><a href="#Contact">Contact</a></li>
         </ul>
         <button
+          id="btnBook"
           class="py-3.5 px-9 bg-red-400 rounded-sm flex-0.5 cursor-pointer hover:scale-105 transition-all"
         >
           Booking now
@@ -126,4 +128,5 @@
     </section>
     <!-- SECTION LOCATION END -->
   </body>
+  <script src="./index.js"></script>
 </html>
