--- a/index.html
+++ b/index.html
@@ -64,12 +64,9 @@
         nomads, pioneers, and voyagers— from island hopping in the
       </p>
       <section class="flex justify-center gap-6">
-        <!-- Добавил gap для отступов между карточками -->
         <!-- Карточка 1 -->
         <article class="bg-white rounded-lg shadow-lg flex flex-col w-[360px]">
-          <!-- Фиксированная ширина -->
           <div class="h-[331px] overflow-hidden">
-            <!-- Контейнер для изображения с фиксированной высотой -->
             <img
               src="./img/travel/image 45.png"
               alt="View of Istanbul, Turkey"
@@ -122,6 +119,43 @@
               South Korea officially the Republic of Korea is a country in East
               Asia.
             </p>
+          </section>
+        </article>
+      </section>
+    </section>
+    <!-- SECTION LOCATION END -->
+    <!-- SECTION LOCATION START -->
+    <section class="max-w-6xl my-0 mx-auto pt-36">
+      <h2 class="text-center text-4xl font-bold pb-5">Special Offers</h2>
+      <p class="text-center max-w-[650px] mx-auto opacity-50 pb-12">
+        With the New Year comes a refreshing sense of wanderlust, a longing in
+        our souls to escape to warmer climates,
+      </p>
+      <section class="flex justify-center gap-6">
+        <!-- Карточка 1 -->
+        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]">
+          <div class="h-[173px] overflow-hidden rounded-2xl">
+            <img
+              src="./img/travel/Discover-sajek-valley 1.png"
+              alt="Sajek Valley
+"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <section class="">
+            <h3 class="text-xl font-medium mb-2 mt-5 text-left">
+              Sajek Valley
+            </h3>
+            <section class="flex justify-between">
+              <div class="location flex align-bottom justify-center mr-2.5">
+                <img src="./img/ico/location.png" alt="location" />
+                <p>Bangladesh</p>
+              </div>
+              <div class="stars flex align-bottom justify-center mr-2.5">
+                <img src="./img/ico/star.png" alt="star" />
+                <p>4.7</p>
+              </div>
+            </section>
           </section>
         </article>
       </section>
