--- a/index.html
+++ b/index.html
@@ -142,20 +142,80 @@
               class="w-full h-full object-cover"
             />
           </div>
-          <section class="">
+          <section>
             <h3 class="text-xl font-medium mb-2 mt-5 text-left">
               Sajek Valley
             </h3>
-            <section class="flex justify-between">
-              <div class="location flex align-bottom justify-center mr-2.5">
+            <section class="flex justify-between items-center max-h-8">
+              <div class="location flex">
                 <img src="./img/ico/location.png" alt="location" />
-                <p>Bangladesh</p>
+                <p class="ml-2.5">Bangladesh</p>
               </div>
-              <div class="stars flex align-bottom justify-center mr-2.5">
+              <div class="stars flex mr-2.5">
                 <img src="./img/ico/star.png" alt="star" />
-                <p>4.7</p>
+                <p class="ml-2.5">4.7</p>
               </div>
             </section>
+            <p class="my-2 opacity-50">3 Day 4 Nights</p>
+            <p>$400/person</p>
+          </section>
+        </article>
+
+        <!-- Карточка 1 -->
+        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]">
+          <div class="h-[173px] overflow-hidden rounded-2xl">
+            <img
+              src="./img/travel/Discover-sajek-valley 1.png"
+              alt="Sajek Valley
+"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <section>
+            <h3 class="text-xl font-medium mb-2 mt-5 text-left">
+              Sajek Valley
+            </h3>
+            <section class="flex justify-between items-center max-h-8">
+              <div class="location flex">
+                <img src="./img/ico/location.png" alt="location" />
+                <p class="ml-2.5">Bangladesh</p>
+              </div>
+              <div class="stars flex mr-2.5">
+                <img src="./img/ico/star.png" alt="star" />
+                <p class="ml-2.5">4.7</p>
+              </div>
+            </section>
+            <p class="my-2 opacity-50">3 Day 4 Nights</p>
+            <p>$400/person</p>
+          </section>
+        </article>
+
+        <!-- Карточка 1 -->
+        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]">
+          <div class="h-[173px] overflow-hidden rounded-2xl">
+            <img
+              src="./img/travel/Discover-sajek-valley 1.png"
+              alt="Sajek Valley
+"
+              class="w-full h-full object-cover"
+            />
+          </div>
+          <section>
+            <h3 class="text-xl font-medium mb-2 mt-5 text-left">
+              Sajek Valley
+            </h3>
+            <section class="flex justify-between items-center max-h-8">
+              <div class="location flex">
+                <img src="./img/ico/location.png" alt="location" />
+                <p class="ml-2.5">Bangladesh</p>
+              </div>
+              <div class="stars flex mr-2.5">
+                <img src="./img/ico/star.png" alt="star" />
+                <p class="ml-2.5">4.7</p>
+              </div>
+            </section>
+            <p class="my-2 opacity-50">3 Day 4 Nights</p>
+            <p>$400/person</p>
           </section>
         </article>
       </section>
