--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <!-- Карточка 3 -->
         <article
           class="bg-white rounded-lg shadow-lg flex flex-col w-[360px]"
-          id="cardTurkey"
+          id="cardSeul"
         >
           <div class="h-[331px] overflow-hidden">
             <img
@@ -155,93 +155,110 @@
         With the New Year comes a refreshing sense of wanderlust, a longing in
         our souls to escape to warmer climates,
       </p>
-      <section
-        class="flex justify-center gap-6 [&>article]:hover:text-red-400 [&>article]:hover:scale-95 [&>article]:hover:transition-transform [&>article]:hover:cursor-pointer"
-      >
-        <!-- Карточка 1 -->
-        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]">
-          <div class="h-[173px] overflow-hidden rounded-2xl">
-            <img
-              src="./img/travel/usa-best-places-new-york 1.png"
-              alt="Statue of Liberty"
-              class="w-full h-full object-cover"
-            />
-          </div>
-          <section>
-            <h3 class="text-xl font-medium mb-2 mt-5 text-left">
-              Statue of Liberty
-            </h3>
-            <section class="flex justify-between items-center max-h-8">
-              <div class="location flex">
-                <img src="./img/ico/location.png" alt="location" />
-                <p class="ml-2.5">New York</p>
-              </div>
-              <div class="stars flex mr-2.5">
-                <img src="./img/ico/star.png" alt="star" />
-                <p class="ml-2.5">4.8</p>
-              </div>
+      <section class="slider-wrapper overflow-hidden">
+        <section
+          class="flex justify-center gap-6 [&>article]:hover:text-red-400 [&>article]:hover:scale-95 [&>article]:hover:transition-transform [&>article]:hover:cursor-pointer"
+          id="slider-container"
+        >
+          <!-- Карточка 1 -->
+          <article
+            class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]"
+          >
+            <div class="h-[173px] overflow-hidden rounded-2xl">
+              <img
+                src="./img/travel/usa-best-places-new-york 1.png"
+                alt="Statue of Liberty"
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <section>
+              <h3 class="text-xl font-medium mb-2 mt-5 text-left">
+                Statue of Liberty
+              </h3>
+              <section class="flex justify-between items-center max-h-8">
+                <div class="location flex">
+                  <img src="./img/ico/location.png" alt="location" />
+                  <p class="ml-2.5">New York</p>
+                </div>
+                <div class="stars flex mr-2.5">
+                  <img src="./img/ico/star.png" alt="star" />
+                  <p class="ml-2.5">4.8</p>
+                </div>
+              </section>
+              <p class="my-2 opacity-50">4 Day 5 Nights</p>
+              <p>$450/person</p>
             </section>
-            <p class="my-2 opacity-50">4 Day 5 Nights</p>
-            <p>$450/person</p>
-          </section>
-        </article>
+          </article>
 
-        <!-- Карточка 2 -->
-        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]">
-          <div class="h-[173px] overflow-hidden rounded-2xl">
-            <img
-              src="./img/travel/china-great-wall-and-mountain 1.png"
-              alt="The Great Wall "
-              class="w-full h-full object-cover"
-            />
-          </div>
-          <section>
-            <h3 class="text-xl font-medium mb-2 mt-5 text-left">
-              The Great Wall
-            </h3>
-            <section class="flex justify-between items-center max-h-8">
-              <div class="location flex">
-                <img src="./img/ico/location.png" alt="location" />
-                <p class="ml-2.5">China</p>
-              </div>
-              <div class="stars flex mr-2.5">
-                <img src="./img/ico/star.png" alt="star" />
-                <p class="ml-2.5">4.9</p>
-              </div>
+          <!-- Карточка 2 -->
+          <article
+            class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]"
+          >
+            <div class="h-[173px] overflow-hidden rounded-2xl">
+              <img
+                src="./img/travel/china-great-wall-and-mountain 1.png"
+                alt="The Great Wall "
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <section>
+              <h3 class="text-xl font-medium mb-2 mt-5 text-left">
+                The Great Wall
+              </h3>
+              <section class="flex justify-between items-center max-h-8">
+                <div class="location flex">
+                  <img src="./img/ico/location.png" alt="location" />
+                  <p class="ml-2.5">China</p>
+                </div>
+                <div class="stars flex mr-2.5">
+                  <img src="./img/ico/star.png" alt="star" />
+                  <p class="ml-2.5">4.9</p>
+                </div>
+              </section>
+              <p class="my-2 opacity-50">7 Day 8 Nights</p>
+              <p>$850/person</p>
             </section>
-            <p class="my-2 opacity-50">7 Day 8 Nights</p>
-            <p>$850/person</p>
-          </section>
-        </article>
+          </article>
 
-        <!-- Карточка 1 -->
-        <article class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]">
-          <div class="h-[173px] overflow-hidden rounded-2xl">
-            <img
-              src="./img/travel/Discover-sajek-valley 1.png"
-              alt="Sajek Valley
+          <!-- Карточка 1 -->
+          <article
+            class="bg-white rounded-lg shadow-lg flex flex-col w-[262px]"
+          >
+            <div class="h-[173px] overflow-hidden rounded-2xl">
+              <img
+                src="./img/travel/Discover-sajek-valley 1.png"
+                alt="Sajek Valley
 "
-              class="w-full h-full object-cover"
-            />
-          </div>
-          <section>
-            <h3 class="text-xl font-medium mb-2 mt-5 text-left">
-              Sajek Valley
-            </h3>
-            <section class="flex justify-between items-center max-h-8">
-              <div class="location flex">
-                <img src="./img/ico/location.png" alt="location" />
-                <p class="ml-2.5">Bangladesh</p>
-              </div>
-              <div class="stars flex mr-2.5">
-                <img src="./img/ico/star.png" alt="star" />
-                <p class="ml-2.5">4.7</p>
-              </div>
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <section>
+              <h3 class="text-xl font-medium mb-2 mt-5 text-left">
+                Sajek Valley
+              </h3>
+              <section class="flex justify-between items-center max-h-8">
+                <div class="location flex">
+                  <img src="./img/ico/location.png" alt="location" />
+                  <p class="ml-2.5">Bangladesh</p>
+                </div>
+                <div class="stars flex mr-2.5">
+                  <img src="./img/ico/star.png" alt="star" />
+                  <p class="ml-2.5">4.7</p>
+                </div>
+              </section>
+              <p class="my-2 opacity-50">3 Day 4 Nights</p>
+              <p>$400/person</p>
             </section>
-            <p class="my-2 opacity-50">3 Day 4 Nights</p>
-            <p>$400/person</p>
-          </section>
-        </article>
+          </article>
+        </section>
+        <div class="slider-controls flex justify-center gap-4 mt-4">
+          <button id="slide-left" class="px-4 py-2 bg-gray-300 rounded">
+            ←
+          </button>
+          <button id="slide-right" class="px-4 py-2 bg-gray-300 rounded">
+            →
+          </button>
+        </div>
       </section>
     </section>
     <!-- SECTION LOCATION END -->
