:feat: add some new components and create cards block

--- a/index.html
+++ b/index.html
@@ -262,6 +262,62 @@
       </section>
     </section>
     <!-- SECTION LOCATION END -->
+
+    <!-- SECTION FLEX GRID CARDS -->
+    <section class="max-w-6xl my-0 mx-auto pt-36">
+      <h2 class="text-center text-4xl font-bold pb-5">From Blog & News</h2>
+      <p class="text-center max-w-[650px] mx-auto opacity-50 pb-12">
+        Welcome to Community Conversations, a new interview series featuring
+        Intrepid travellers, creatives and activists in our community.
+      </p>
+      <section class="flex flex-1/2 gap-8">
+        <div class="cardInfo">
+          <img src="./img/canada-ontario-niagara-falls-2 1.png" alt="Canada" />
+          <h4 class="font-bold mt-9 mb-2.5">Banff National Park</h4>
+          <p class="max-w-[470px] pb-2.5">
+            Banff National Park lies in the heart of the majestic Rocky
+            Mountains in the province of Alberta, and showcases some of Canada's
+            most beautiful scenery. Turquoise-colored lakes, snow-capped peaks,
+            and glaciers are all easily accessible
+          </p>
+          <a href="#" class="font-medium">@thomasalva_adison</a>
+        </div>
+        <div class="cards flex-1/2">
+          <div class="miniCard flex">
+            <div class="left">
+              <img src="./img/india-top-attractions-varanasi 1.png" alt="" />
+            </div>
+            <div class="rigth">
+              <h4>The Hiroshima Peace!</h4>
+              <p>It was formally opened to the public in August that year.</p>
+              <a href="#">@shova_bd88</a>
+            </div>
+          </div>
+          <div class="miniCard flex">
+            <div class="left">
+              <img src="./img/india-top-attractions-varanasi 1.png" alt="" />
+            </div>
+            <div class="rigth">
+              <h4>The Hiroshima Peace!</h4>
+              <p>It was formally opened to the public in August that year.</p>
+              <a href="#">@shova_bd88</a>
+            </div>
+          </div>
+          <div class="miniCard flex">
+            <div class="left">
+              <img src="./img/india-top-attractions-varanasi 1.png" alt="" />
+            </div>
+            <div class="rigth">
+              <h4>The Hiroshima Peace!</h4>
+              <p>It was formally opened to the public in August that year.</p>
+              <a href="#">@shova_bd88</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+
+    <!-- SECTION FLEX GRID CARDS -->
   </body>
   <script src="./index.js"></script>
 </html>
