:feat: create some footer

--- a/index.html
+++ b/index.html
@@ -427,18 +427,33 @@
 
     <!-- FOOTER -->
 
-    <footer>
+    <footer class="max-w-6xl mx-auto pt-16 px-4 flex justify-between">
       <section>
         <h1>Travland</h1>
         <p>Contact us</p>
         <a href="#">@shovasatkhira88.com</a>
-        <div class="social">
+        <div class="social flex [&>p]:pr-4">
           <link rel="stylesheet" href="#" />
-          <img src="./img/ico/location.png" alt="" />
+          <p>facebook</p>
+          <p>instagram</p>
+          <p>twitter</p>
+          <p>google</p>
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section>
+        <p>Services</p>
+        <p>About</p>
+        <p>Our story</p>
+        <p>Benefits</p>
+        <p>Branding</p>
+      </section>
+      <section>
+        <p>Services</p>
+        <p>About</p>
+        <p>Our story</p>
+        <p>Benefits</p>
+        <p>Branding</p>
+      </section>
       <section></section>
     </footer>
 
