--- a/index.html
+++ b/index.html
@@ -263,82 +263,9 @@
     </section>
     <!-- SECTION LOCATION END -->
 
-    <!-- SECTION FLEX GRID CARDS -->
-    <!-- <section class="max-w-6xl my-0 mx-auto pt-36">
-      <h2 class="text-center text-4xl font-bold pb-5">From Blog & News</h2>
-      <p class="text-center max-w-[650px] mx-auto opacity-50 pb-12">
-        Welcome to Community Conversations, a new interview series featuring
-        Intrepid travellers, creatives and activists in our community.
-      </p> -->
+    <!-- SECTION FLEX CARDS -->
 
-    <!-- <section class="flex flex-1/2 gap-8">
-        <div class="cardInfo" id="mainCard">
-          <img src="./img/canada-ontario-niagara-falls-2 1.png" alt="Canada" />
-          <h4 class="font-bold mt-9 mb-2.5">Banff National Park</h4>
-          <p class="max-w-[470px] pb-2.5">
-            Banff National Park lies in the heart of the majestic Rocky
-            Mountains in the province of Alberta, and showcases some of Canada's
-            most beautiful scenery. Turquoise-colored lakes, snow-capped peaks,
-            and glaciers are all easily accessible
-          </p>
-          <a href="#" class="font-medium">@thomasalva_adison</a>
-        </div>
-        <div
-          class="cards flex-1/2 [&>div]:hover:transition-all [&>div]:hover:cursor-pointer [&>div]:hover:rounded-2xl [&>div]:hover:bg-red-200"
-        >
-          <div class="miniCard flex" id="otherCard">
-            <div class="left">
-              <img
-                src="./img/hiroshima-japan-1500-1100x825 1.png"
-                alt="Hiroshima"
-                class="max-w-[262px]"
-              />
-            </div>
-            <div class="rigth flex flex-col justify-center gap-2 pl-4">
-              <h4 class="font-medium">The Hiroshima Peace!</h4>
-              <p class="opacity-70">
-                It was formally opened to the public in August that year.
-              </p>
-              <a href="#" class="text-lg">@shova_bd88</a>
-            </div>
-          </div>
-
-          <div class="miniCard flex my-5" id="otherCard">
-            <div class="left">
-              <img
-                src="./img/india-top-attractions-varanasi 1.png"
-                alt="The faithful prayers!"
-                class="max-w-[262px]"
-              />
-            </div>
-            <div class="rigth flex flex-col justify-center gap-2 pl-4">
-              <h4 class="font-medium">The faithful prayers!</h4>
-              <p class="opacity-70">
-                A major pilgrimage center for Hindus, the holy city.
-              </p>
-              <a href="#" class="text-lg">@adem/smith</a>
-            </div>
-          </div>
-          <div class="miniCard flex" id="otherCard">
-            <div class="left">
-              <img
-                src="./img/Naltar-lake-pakistan 1.png"
-                alt="Colourful waters!"
-                class="max-w-[262px]"
-              />
-            </div>
-            <div class="rigth flex flex-col justify-center gap-2 pl-4">
-              <h4 class="font-medium">Colourful waters!</h4>
-              <p class="opacity-70">
-                Forest-driven water and energy cycles are poorly.
-              </p>
-              <a href="#" class="text-lg">@jhon7leew</a>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-    <div class="max-w-6xl mx-auto pt-16 px-4">
+    <div class="max-w-6xl mx-auto pt-16 px-4 mt-36">
       <h2 class="text-center text-4xl font-bold pb-5">From Blog & News</h2>
       <p class="text-center max-w-[650px] mx-auto opacity-50 pb-12">
         Welcome to Community Conversations, a new interview series featuring
@@ -423,16 +350,18 @@
       </section>
     </div>
 
-    <!-- SECTION FLEX GRID CARDS -->
+    <!-- SECTION FLEX CARDS -->
 
     <!-- FOOTER -->
 
-    <footer class="max-w-6xl mx-auto pt-16 px-4 flex justify-between">
+    <footer
+      class="max-w-6xl mx-auto pt-16 px-4 flex justify-between align-top mt-36"
+    >
       <section>
-        <h1>Travland</h1>
-        <p>Contact us</p>
+        <h1 class="mb-10">Travland</h1>
+        <p class="mb-2.5">Contact us</p>
         <a href="#">@shovasatkhira88.com</a>
-        <div class="social flex [&>p]:pr-4">
+        <div class="social flex [&>p]:pr-4 mt-5">
           <link rel="stylesheet" href="#" />
           <p>facebook</p>
           <p>instagram</p>
@@ -440,21 +369,39 @@
           <p>google</p>
         </div>
       </section>
-      <section>
+      <section
+        class="[&>p]:mb-5 [&>p]:hover:transition-all [&>p]:hover:text-red-400 [&>p]:hover:cursor-pointer"
+      >
         <p>Services</p>
         <p>About</p>
         <p>Our story</p>
         <p>Benefits</p>
         <p>Branding</p>
       </section>
-      <section>
-        <p>Services</p>
-        <p>About</p>
-        <p>Our story</p>
-        <p>Benefits</p>
-        <p>Branding</p>
+      <section
+        class="[&>p]:mb-5 [&>p]:hover:transition-all [&>p]:hover:text-red-400 [&>p]:hover:cursor-pointer"
+      >
+        <p>Legal</p>
+        <p>Terms & Conditions</p>
+        <p>Privecy Policy</p>
+        <p>Terms of use</p>
       </section>
-      <section></section>
+      <section>
+        <h4 class="font-bold mb-10">SUBSCRIBE NOW</h4>
+        <input
+          type="email"
+          name="Enter email"
+          id="email"
+          value="Enter"
+          class="border-1 rounded-2xl"
+        />
+        <button
+          id="btnBook"
+          class="py-3.5 px-9 bg-red-400 rounded-sm flex-0.5 cursor-pointer hover:scale-105 transition-all text-white"
+        >
+          Send
+        </button>
+      </section>
     </footer>
 
     <!-- FOOTER -->
