--- a/index.html
+++ b/index.html
@@ -4,25 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/output.css" rel="stylesheet" />
+
+    <!-- ICON -->
     <link
       rel="shortcut icon"
       href="./img/travel-svgrepo-com.svg"
       type="image/x-icon"
     />
+    <!-- ICON -->
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- FONTS -->
+
     <title>Traveland</title>
   </head>
   <body class="bg-[url('/img/background.jpg')] bg-no-repeat bg-top">
-    <header class="max-w-[1600px] my-0 mx-auto text-white">
+    <header class="max-w-[1600px] my-0 mx-auto text-white" id="Home">
       <nav
         class="flex max-w-6xl my-0 mx-auto justify-between items-center pt-9"
       >
         <p class="flex-0.5">Trevland</p>
-        <ul class="flex flex-1 justify-around px-54">
-          <a href="#Home">Home</a>
-          <a href="#Location">Location</a>
-          <a href="#Blog">Blog</a>
-          <a href="#About">About</a>
-          <a href="#Contact">Contact</a>
+        <ul
+          class="flex flex-1 justify-around px-54 [&>li>a]:hover:text-red-400 [&>li>a]:transition-colors"
+        >
+          <li><a href="#Home">Home</a></li>
+          <li><a href="#Location">Location</a></li>
+          <li><a href="#Blog">Blog</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
         <button class="py-3.5 px-9 bg-red-400 rounded-sm flex-0.5">
           Booking now
